# sentiment_analysis

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_tox  Dockerfile_wheels  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  common-requirements.txt  docker-compose.yml  forward_prometheus.sh  pip.conf  pyproject.toml  show_prometheus_resources.sh  start_nginx_controller.sh  workbench_aliases.sh
frontend/: .dockerignore  .gitignore  .pnp.cjs  Dockerfile  Dockerfile.dev  Dockerfile.prod  eslint.config.ts  index.html  package-lock.json  package.json  start_frontend.sh  tsconfig.json  vite.config.ts  vitest.config.ts  yarnrc.yml
metrics/: Readme.md  model-api-service-monitor.yml
performance/: README.md  pyproject.toml
performance/src/: metric_scraper.py  remote_call_review.py
performance/src/performance/utils/: metric_scraper.py  prometheus_client.py  remote_call_review.py
performance/tests/: test_metric_scraper.py  test_remote_call_review.py
performance/tests/performance/utils/: test_metric_scraper.py  test_remote_call_review.py
rest-api/: Dockerfile  Makefile  main.py  model-api-deployment.yml  pyproject.toml  requirements.txt  tox.ini
rest-api/manifests/: model-api-service.yml
rest-api/manifests/deployment/: model-api-deployment.yml
rest-api/manifests/ingress/: model-api-ingress.yml
rest-api/manifests/service/: model-api-service.yml
rest-api/src/: review_prediction.py
rest-api/src/model_api/: app.py  config.py  main.py  model.py  review_prediction.py
rest-api/src/model_api/config/: config.py  dev_config.py  prod_config.py  test_config.py
rest-api/src/model_api/model/: model.py
rest-api/src/model_api/routes/: metrics.py  review_prediction.py
rest-api/src/model_api/services/: sentiment_service.py
rest-api/tests/: test_app.py  test_integration_tests.py  test_model.py  test_review_prediction.py
rest-api/tests/model/: test_model.py
rest-api/tests/routes/: test_review_prediction.py
rest-api/tests/services/: test_sentiment_service.py
rest-api/tests/test_resources/: lookup_table.json  test_config.py
scripts/: how_many_parallel.sh  oc_apply.sh  oc_metrics.sh  recommend_paralellism.sh  remote_call.sh  (+1 more)
sentiment-model/: Untitled.ipynb  pyproject.toml  requirements.txt  sentiment_model.ipynb  setup.py  test-requirements.txt  tox.ini
sentiment-model/sentiment_model/: lookup_table_creator.py  review_stats.py  text_preprocessing.py
sentiment-model/src/: lookup_table_creator.py  review_learn.py  review_stats.py
sentiment-model/src/sentiment_model/: lookup_table_creator.py  review_learn.py  review_stats.py  text_preprocessing.py
sentiment-model/tests/: test_pipeline_integration_tests.py  test_review_learn.py  test_text_preprocessing.py
(+32 files in other folders)
