[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.tox]
envlist=["pytest-312", "lint", "format"]

[tox.tox.env.pytest]
description="Run tests with python 3.12"
commands=[
    ["pytest", "--cov=performance", "--cov-report=term-missing", "tests/"]
]

[tool.tox.env.lint]
description = "Run flake8 linter"
deps = ["flake8"]
commands = [
    ["flake8", "src/"]
]

[tool.tox.env.format]
description = "Run black formatter"
deps = ["black"]
commands = [
    ["black", "src/"],
]

[tool.tox.env.coverage]
description = "Run tests and generate HTML coverage report"
commands = [
    ["pytest", "--cov=model_api", "--cov-report=html", "tests/"]
]

[project]
name = "performance_utils"
version = "1.0"
