[tool.tox]
envlist = ["py312", "lint", "format"]

[tool.tox.env.py312]
description = "Run tests with Python 3.12"
deps = [
    "pytest",
    "pytest-cov",
    "-rrequirements.txt"
]
commands = [
    ["pytest", "--cov=sentiment_model", "--cov-report=term-missing", "tests/"]
]

[tool.tox.env.lint]
description = "Run flake8 linter"
deps = ["flake8"]
commands = [
    ["flake8", "src/"]
]

[tool.tox.env.format]
description = "Run black formatter"
deps = ["black"]
commands = [
    ["black", "src/"],
]

[tool.tox.env.coverage]
description = "Run tests and generate HTML coverage report"
deps = [
    "pytest",
    "pytest-cov",
    "-rrequirements.txt"
]
commands = [
    ["pytest", "--cov=sentiment_model", "--cov-report=html", "tests/"]
]

[project]
name = "sentiment_model"
version = "2.0"
